--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
 	<name>spring-graphql</name>
 	<description>Spring boot with Graphql by prashant</description>
 	<properties>
-		<java.version>16</java.version>
-	</properties>
+		<java.version>1.8</java.version>	</properties>
 	<dependencies>
 
 		<dependency>
